--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,10 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
           <div class="header">
-          <img src="images/nasusicon.jpg" alt="logo" />
+          <img src="images/nasusicon.jpg" alt="logo" width="100" height="100"/>
             <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </div>
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
           {% if site.show_downloads %}
             <section id="downloads">
