--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,10 @@
           {% if site.github.is_project_page %}
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
+          
           <div class="header">
-            <h1 id="project_title" style="display: inline"><img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="display: inline"/>{{ site.title | default: site.github.repository_name }}</h1>
+            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="display: inline"/>
+            <h1 id="project_title" style="display: inline">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </div>
 
