--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
           {% endif %}
           
           <div class="header">
-            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="display: inline"/>
-            <h1 id="project_title" style="display: inline">{{ site.title | default: site.github.repository_name }}</h1>
+            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="display: inline-block"/>
+            <h1 id="project_title" style="display: inline-block">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </div>
 
