--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
           {% endif %}
           
           <div class="header">
-            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="float:left"/>
+            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="float:left margin-right:50px"/>
             <h1 id="project_title" style="display: inline-block">{{ site.title | default: site.github.repository_name }}</h1>
-            <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
           </div>
+          <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
 
           {% if site.show_downloads %}
             <section id="downloads">
