--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           {% endif %}
           
           <div class="header">
-            <h1 id="project_title" style="vertical-align:middle font-size=100px"><img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="vertical-align:middle"/>{{ site.title | default: site.github.repository_name }}</h1>
+            <h1 id="project_title" style="vertical-align:middle;font-size=100px"><img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="vertical-align:middle"/>{{ site.title | default: site.github.repository_name }}</h1>
           </div>
           <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
 
