--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           
           <div class="header">
             <img src="images/nasusicon.jpg" alt="logo" width="100" height="100" style="vertical-align:middle"/>
-            <h1 id="project_title" style="font-size=100px">{{ site.title | default: site.github.repository_name }}</h1>
+            <h1 id="project_title" style="display: inline-block;font-size=20px">{{ site.title | default: site.github.repository_name }}</h1>
           </div>
           <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
 
