--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
           
-          <div class="header" style="align-items:center">
-            <img src="images/nasusicon.jpg" alt="logo" width="100" height="100"/>
-            <h1 id="project_title" style="font-size=20px">{{ site.title | default: site.github.repository_name }}</h1>
+          <div class="header">
+            
+            <h1 id="project_title"><img src="images/nasusicon.jpg" alt="logo" width="75" height="75" style="vertical-align:middle"/>{{ site.title | default: site.github.repository_name }}</h1>
           </div>
           <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
 
