--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           
           <div class="header">
             
-            <h1 id="project_title"><img src="images/nasusicon.jpg" alt="logo" width="75" height="75" style="vertical-align:middle"/>{{ site.title | default: site.github.repository_name }}</h1>
+            <h1 id="project_title" style="font-size: 32px"><img src="images/nasusicon.jpg" alt="logo" width="75" height="75" style="vertical-align:middle"/>{{ site.title | default: site.github.repository_name }}</h1>
           </div>
           <h6 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h6>
 
